--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.eslintcache
+package-lock.json
+package.json
+README.node_md
+yarn.lock
+src/reportWebVitals.js
