--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "cheerio": "^1.0.0-rc.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "request": "^2.88.2",
     "reactstrap": "^8.8.0",
     "request": "^2.88.2",
     "web-vitals": "^0.2.4"
