--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "cheerio": "^1.0.0-rc.5",
+    "cors-anywhere": "^0.4.3",
+    "fetch-jsonp": "^1.1.3",
     "firebase": "^8.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
