--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "firebase": "^8.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading": "^2.0.3",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.8.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "web-vitals": "^0.2.4"
   },
