--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.5",
     "cors-anywhere": "^0.4.3",
     "date-fns": "^2.16.1",
+    "emailjs-com": "^2.6.4",
     "fetch-jsonp": "^1.1.3",
     "firebase": "^8.2.4",
     "react": "^17.0.1",
