--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fetch-jsonp": "^1.1.3",
     "firebase": "^8.2.4",
     "react": "^17.0.1",
+    "react-animated-list": "^0.1.4",
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
     "react-player": "^2.8.2",
