--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^2.6.4",
     "fetch-jsonp": "^1.1.3",
     "firebase": "^8.2.4",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-animated-list": "^0.1.4",
     "react-dom": "^17.0.1",
@@ -30,6 +31,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
+    "swiper": "^6.4.11",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
