--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.0",
     "cheerio": "^1.0.0-rc.5",
     "cors-anywhere": "^0.4.3",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.17.0",
     "emailjs-com": "^2.6.4",
     "fetch-jsonp": "^1.1.3",
-    "firebase": "^8.2.4",
+    "firebase": "^8.2.9",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-animated-list": "^0.1.4",
     "react-dom": "^17.0.1",
     "react-intersection-observer": "^8.31.0",
     "react-loading": "^2.0.3",
-    "react-player": "^2.8.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "reactstrap": "^8.8.0",
+    "react-scripts": "^4.0.3",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
-    "swiper": "^6.4.11",
+    "swiper": "^6.4.15",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
